# rookie_invest_ML

./: .gitignore  README.md  pyproject.toml
data/model_input/: f2_f3_features_with_f1_label.csv
demo/: demo_runner.ipynb
demo/artifacts/: drop_cols.txt  logreg_model.joblib  validation_lookup.csv
demo/input_by_year/: drivers_2017.csv  drivers_2018.csv  drivers_2019.csv  drivers_2020.csv  drivers_2021.csv  drivers_2022.csv  drivers_2023.csv  drivers_2024.csv  drivers_2025.csv  test_drivers_2022_2023_minimal.csv
demo/output/: top_candidates.html  top_candidates_with_context.html
docs/: DATA_SOURCES.md  MODEL_NOTES.md  NOTEBOOKS.md  PROJECT_SCOPE.md  README.md  REPRODUCIBILITY.md
exports/: top_candidates_2022_2023.html
notebooks/: 01_data_collection_and_features.ipynb  02_labeling_and_split.ipynb  03_baseline_and_demo.ipynb  04_model_comparison.ipynb  notebook.ipynb  phase_1_data_collection.ipynb  phase_2_model_development.ipynb  phase_3.1_testing_and_demo.ipynb  phase_3_prototype_testing_and_demo.ipynb  was_in_die_präsi_muss.ipynb
notebooks/f2/: check_f2_raw.ipynb
notebooks/f3/: f3_features_check.ipynb
notebooks/model_training/: 01_letzte_tests_vor_training.ipynb  02_train_test_split.ipynb  03_baseline_logistic_regression.ipynb  04_model_comparison_random_forest.ipynb
src/all_series/: build_all_master_features.py  build_all_master_features_core.py
src/common/: features.py
src/demo/: export_demo_artifacts.py  run_demo.py  run_kb_demo.py
src/f1/: build_features.py  clean.py
src/f2/: build_features.py  clean.py  clean_f2_results.py  ingest.py
(+32 files in other folders)
